# SciDataBot

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  run_tui.py  run_with_timeout.py  scidatabot  scidatabot.sh  simple_tui.py  test_data_prep.py  test_mat_parallel.py  test_parallel.py  tui.py
data/: bioi_visualization.json  p450_1_bioi_visualization.json  p450_enzymes.json  p450_visualization.py
src/: __init__.py  config.yaml  main.py
src/bus/: __init__.py  queue.py
src/channels/: __init__.py  base.py  console.py  feishu.py  feishu_ws.py  manager.py  telegram.py  webhook.py  wechat.py
src/cli/: __init__.py
src/config/: __init__.py  loader.py  paths.py  schema.py
src/core/: __init__.py  agent.py  context.py  format_registry.py  lane_scheduler.py  main_agent.py  memory.py  prompt_builder.py  registry.py  scheduler.py  session.py  subagent.py
src/cron/: __init__.py  service.py  types.py
src/heartbeat/: __init__.py
src/knowledge/: __init__.py
src/process/: __init__.py  batch.py  command_queue.py  guardrails.py  stream.py  supervisor.py
src/providers/: __init__.py  anthropic.py  base.py  deepseek.py  glm.py  google.py  grok.py  intern_s1.py  kimi.py  minimax.py  openai.py  proxy.py  qwen.py  registry.py
src/session/: __init__.py  manager.py  memory.py
src/skills/: __init__.py  github.py  loader.py  manager.py  memory.py  summarize.py  tmux.py  weather.py
src/storage/: __init__.py
src/templates/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
src/tools/: __init__.py  base.py  registry.py
templates/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
(+63 files in other folders)
